--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Echo the message
         run: |
-          echo "Hola Dani!"
+          echo "Hola Daniela!"
       - name: Dime la fecha
         run: date
       - run: ls -l
